<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cn.ifafu.ifafu.view.custom.WToolbar
        android:id="@+id/tb_score_filter"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/score_filter_title">

        <TextView
            android:id="@+id/btn_filter_all"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/score_filter_all"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"/>

    </cn.ifafu.ifafu.view.custom.WToolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#DDFFFF"
        android:gravity="center"
        android:text="@string/score_filter_hint"
        android:textColor="#1dcbdb"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_now_ies"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#DDFFFF"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="#1dcbdb"
        android:textSize="12sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_score_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_score_filter"/>

</LinearLayout>