<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="version"
            type="String" />

        <variable
            name="debug"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <cn.ifafu.ifafu.view.custom.WToolbar
            android:id="@+id/tb_about"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:elevation="4dp"
            app:title="@string/about">

            <ImageButton
                android:id="@+id/btn_feed"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/about_feed_btn" />

        </cn.ifafu.ifafu.view.custom.WToolbar>

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="120dp"
            android:src="@{debug ? @drawable/icon_ifafu_round_test : @drawable/icon_ifafu_round, default=@drawable/icon_ifafu_round}" />

        <TextView
            android:id="@+id/aboutAppSubName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/app_sub_name(version), default=@string/app_sub_name}"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/about_1"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/about_2"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_3"
            android:textAlignment="center"
            android:textColor="#04e614"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/about_4"
            android:textAlignment="center"
            android:textColor="#944"
            android:textColorLink="#944"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_group" />

            <TextView
                android:id="@+id/btn_goto_qq_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_QQ_group"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_weibo" />

            <TextView
                android:id="@+id/btn_goto_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_weibo"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_email" />

            <TextView
                android:id="@+id/btn_goto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</layout>

