<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="cn.ifafu.ifafu.ui.feedback.FeedbackViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <cn.ifafu.ifafu.view.custom.WToolbar
            android:id="@+id/tb_elec"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:elevation="4dp"
            app:title="反馈" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/content_required"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="#FAFAFA"
            android:gravity="start|top"
            android:hint="@string/enter_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:text="@={vm.content}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contact_require"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="#FAFAFA"
            android:hint="@string/contact"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@={vm.contact}" />

        <androidx.appcompat.widget.AppCompatButton
            onClickCommand="@{vm.submitCommand}"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_btn_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</layout>