<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/bg_logo"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
        android:alpha="0.05"
        android:src="@drawable/drawable_fafu" />

    <ImageView
        android:id="@+id/btn_finish"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_down"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_welcome"
        android:textColor="@color/little_blue"
        android:textSize="25sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="48dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/drawable_ifafu2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_on_fafu"
            android:textColor="@color/little_blue"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/little_blue"
            app:hintTextAppearance="@style/TextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account"
                style="@style/EditText.Material"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/account"
                android:inputType="number"
                android:textColorLink="@color/little_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/little_blue"
            app:hintTextAppearance="@style/TextInput"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditText.Material"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_btn_blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
