<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <cn.ifafu.ifafu.view.WToolbar
        android:id="@+id/tb_score"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/score" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <TextView
        android:id="@+id/tv_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="72dp">

            <TextView
                android:id="@+id/tv_ies_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="44sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ies_little"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_ies_big"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/tv_ies_big"
                android:text="@string/loading"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/score_ies" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="72dp">

            <TextView
                android:id="@+id/tv_cnt_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="44sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cnt_little"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_cnt_big"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/tv_cnt_big"
                android:text="@string/loading"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/score_cnt" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/bg_gray" />

    <cn.ifafu.ifafu.view.EmptyView
        android:id="@+id/view_exam_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:message="@string/exam_data_empty" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        tools:listitem="@layout/item_score" />

</LinearLayout>