<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="cn.ifafu.ifafu.view.adapter.ScoreFilterAdapter" />

        <variable
            name="vm"
            type="cn.ifafu.ifafu.experiment.score.filter.ScoreFilterViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <cn.ifafu.ifafu.view.custom.WToolbar
            android:id="@+id/tb_score_filter"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="4dp"
            app:title="@string/score_filter_title">

            <TextView
                android:id="@+id/btn_filter_all"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@string/score_filter_all"
                android:textSize="16sp" />

        </cn.ifafu.ifafu.view.custom.WToolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#DDFFFF"
            android:gravity="center"
            android:text="@string/score_filter_hint"
            android:textColor="#1dcbdb"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_now_ies"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#DDFFFF"
            android:gravity="center"
            android:text="@{@string/score_filter_now_ies(vm.ies)}"
            android:textColor="#1dcbdb"
            android:textSize="12sp"
            tools:text="当前智育分：91分" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_score_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_score_filter" />

    </LinearLayout>
</layout>